sample/error/top_prohibited-import_as.bfr
// web playgroundでは禁止
import "../lib.bfr" as Lib

codegen []